--- a/twitter-clone/package.json
+++ b/twitter-clone/package.json
@@ -14,7 +14,8 @@
     "@emotion/styled": "^11.10.4",
     "@material-ui/core": "^4.12.4",
     "@mui/icons-material": "^5.10.9",
-    "@mui/material": "^5.10.9"
+    "@mui/material": "^5.10.9",
+    "bootstrap-icons": "^1.9.1"
   },
   "scripts": {
     "start": "react-scripts start",
